res:dock:: fix trayicons wrong position.
reason:
.Activator .AppItemImg is more specific then .AppletItemImg.

solution:
using .AppletItem .AppletItemImg.

--- a/resources/dock/css/classic/list.css
+++ b/resources/dock/css/classic/list.css
@@ -135,7 +135,7 @@
   width: 16px;
   margin: auto 8px;
 }
-.AppletItemImg {
+.AppletItem .AppletItemImg {
   width:16px;
   height: 16px;
   margin: 0;
